update models and db connection
