# backend/api/branch.go
@@ -7,6 +7,7 @@ import (
 type Branch struct {
 	Id           primitive.ObjectID `bson:"_id" json:"id,omitempty"`
 	MerchantId   string             `bson:"merchantId" json:"merchantId,omitempty"`
+	MerchantName string             `bson:"merchantName" json:"merchantName,omitempty"`
 	Name         string             `bson:"name" json:"name,omitempty"`
 	Municipality string             `bson:"municipality" json:"municipality,omitempty"`
 	Street       string             `bson:"street" json:"street,omitempty"`
