# backend/docs/swagger.yaml
@@ -6,6 +6,8 @@ definitions:
         type: string
       merchantId:
         type: string
+      merchantName:
+        type: string
       municipality:
         type: string
       name:
@@ -16,6 +18,8 @@ definitions:
   api.Merchant:
     properties:
       category:
+        type: string
+      country:
         type: string
       id:
         type: string
@@ -28,6 +32,8 @@ definitions:
     type: object
   api.Receipt:
     properties:
+      branchId:
+        type: string
       date:
         type: string
       description:
@@ -40,24 +46,24 @@ definitions:
         type: string
       merchantId:
         type: string
-      transactionId:
-        type: string
     type: object
   api.ReceiptEntry:
     properties:
+      amount:
+        type: string
       id:
         type: string
       quantity:
         type: integer
       title:
         type: string
-      value:
-        type: string
       vatRate:
         type: number
     type: object
   api.Transaction:
     properties:
+      amount:
+        type: number
       date:
         type: string
       description:
@@ -68,10 +74,10 @@ definitions:
         type: string
       purpose:
         type: string
+      receiptId:
+        type: string
       userid:
         type: string
-      value:
-        type: number
       valutaDate:
         type: string
     type: object
